# ISDS

./: .gitignore  README.md  pyproject.toml
data/interim/: UNCTAD-ISDS-Navigator-data-set-31December2023_urlExtract.xlsx  UNCTAD_UNMATCHED_COUNTRIES.csv  UNCTAD_economy_classification.csv  cases_without_state_icsid.csv  icsid_clean_cases_202606_processed.csv
data/processed/: MINING_CASES_202606.csv
data/raw/: PCA_INVESTOR_STATE_CASES_052026.xlsx  UNCTAD_Dim_Countries_Hierarchy_UnctadStat_All_Flat.xls  icsid_cases_all_202605.csv  icsid_cases_mining_202605.csv
notebooks/: analysis.ipynb
utils/: bar_plot_utils.py  constant_variables.py  country_utils.py
